fix: drop-down submenu on small screens now displays as intended

--- a/src/Componets/CSS/nav - before mobile refactor.css
+++ b/src/Componets/CSS/nav - before mobile refactor.css
@@ -11,11 +11,14 @@ nav {
 .nav-list {
     display: flex;
     flex-flow: column nowrap;
+    /* align-items: center; */
+    /* align-content: center; */
+    /* justify-content: space-around; */
     width: 100%;
     /* height: 250px; */
-    max-height: 800px;
-    /* flex-grow:2; */
-    transition: all 500ms ease-in-out;
+    max-height: 400px;
+    flex-grow:2;
+    transition: all 500ms ease;
     overflow: hidden;
     padding: 0;
 }
@@ -51,7 +54,6 @@ nav {
     padding: 0.5rem;
     font-size: 1rem;
     display: inline-block;
-    max-height: 1rem;
 }
 
 .active {
@@ -107,28 +109,32 @@ nav {
     position: relative;
 }
 
+
 .drop-down-menu {
+    color:black;
+    outline: none;
+    padding: 0 0rem 0 0 !important;
+    position: absolute;
+    /* left:-1px; */
+    background: #ebebeb;
     display: flex;
     flex-flow: column nowrap;
-    padding: 0;
-    margin:auto;
-    max-height: 0;
-    transition: max-height 400ms ease;
+    width: 200px;
+    text-align: left;
+    transition: height 350ms ease;
+    height: 0;
+    overflow: hidden;
 }
 
 .drop-down-hide {
-    max-height: 0;
+    height: 0;
 }
-
 .drop-down-hide li {
     display: none;
 }
-
 .drop-down-expand {
-    /* height: calc(2rem * 9); */
-    max-height: 300px;
-    /* border: 1px solid  #d0d0d0; */
-    width: 100%;
+    height: calc(2rem * 9);
+    border: 1px solid  #d0d0d0;
 }
 /* .drop-down-menu:focus {
     outline: none;
@@ -148,32 +154,23 @@ nav {
     width: 200px;
     font-size: 0.9rem;
     display: flex;
-    max-height: 2rem;
-    width: 100%;
-    max-width: 100%;
+    height: 2rem;
 }
 
 .drop-down-item a {
     width: 100%;
     background: #f2f2f2;
-    padding: 0.5rem 0;
+    padding: 0.4rem 0;
     /* margin-left: 0.25rem; */
-    border-bottom: 1px dotted #8080804f;
-    max-height: 1rem;
 }
-
-.drop-down-menu li:last-of-type a {
-    border-bottom: none;
-}
-
-/* .drop-down-item:hover {
+.drop-down-item:hover {
     margin: 0 !important;
     padding: 0 !important;
     max-width: 200px;
     width: 200px;
     font-size: 0.9rem;
-} */
 
+}
 .drop-down-item:focus {
     text-decoration: none;
     outline: none;
@@ -200,7 +197,6 @@ nav {
 
 .test-dropdown {
     position: relative;
-    max-height: 100%;
     /* overflow: visible; */
     /* border: 1px solid red; */
 }
@@ -247,36 +243,6 @@ nav {
 }
 
 @media screen and (min-width:600px) {
-    .drop-down-menu {
-        color:black;
-        outline: none;
-        padding: 0 0rem 0 0 !important;
-        position: absolute;
-        /* left:-1px; */
-        background: #ebebeb;
-        display: flex;
-        flex-flow: column nowrap;
-        width: 200px;
-        text-align: left;
-        transition: height 350ms ease;
-        height: 0;
-        overflow: hidden;
-    }
-    
-    .drop-down-hide {
-        height: 0;
-    }
-    .drop-down-hide li {
-        display: none;
-    }
-    .drop-down-expand {
-        height: calc(2rem * 9);
-        border: 1px solid  #d0d0d0;
-    }
-    .drop-down-item a {
-        border: none;
-    }
-
     nav {
         height: 4.5rem;
     }
